force-app/main/default/objects/Reimbursement_Account_Code__mdt/Reimbursement_Account_Code__mdt.object-meta.xml
<CustomObject>
    <label>Reimbursement Account Code</label>
    <pluralLabel>Reimbursement Account Codes</pluralLabel>
</CustomObject>