force-app/main/default/objects/Reimbursement_Account_Code__mdt/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <inlineHelpText>New Account # (Oracle)</inlineHelpText>
    <label>Account #</label>
    <length>6</length>
    <type>Text</type>
</CustomField>