force-app/main/default/objects/Reimbursement_Account_Code__mdt/fields/Budget_Category__c.field-meta.xml
<CustomField>
    <fullName>Budget_Category__c</fullName>
    <label>Budget Category</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>