force-app/main/default/objects/Reimbursement_Account_Code__mdt/fields/Temporary_Amount__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Amount__c</fullName>
    <description>Used to temporarly hold the amount entered that will be allocated toward an Account #.</description>
    <label>Temporary Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>