force-app/main/default/objects/Reimbursement_Account_Code__mdt/listViews/All_Custom.listView-meta.xml
<ListView>
    <fullName>All_Custom</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Budget_Category__c</columns>
    <columns>Account__c</columns>
    <columns>Description__c</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>All - Custom</label>
</ListView>